--- a/frontend-elevator-doors/Dockerfile
+++ b/frontend-elevator-doors/Dockerfile
@@ -11,10 +11,12 @@ COPY . .
 RUN npm run build
 
 # PRODUCT
-FROM nginx:stable-alpine
+FROM nginx:alpine
+
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 RUN rm -rf /usr/share/nginx/html/*
-
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 EXPOSE 80
